acl, check token